--- a/platforms/ios/HelloCordova/HelloCordova-Info.plist
+++ b/platforms/ios/HelloCordova/HelloCordova-Info.plist
@@ -40,6 +40,8 @@
     <dict>
       <key>NSExceptionDomains</key>
       <dict>
+        <key>boiling-earth-57949.herokuapp.com</key>
+        <dict/>
         <key>localhost</key>
         <dict>
           <key>NSExceptionAllowsInsecureHTTPLoads</key>
