--- a/platforms/ios/Peek/Peek-Info.plist
+++ b/platforms/ios/Peek/Peek-Info.plist
@@ -34,7 +34,7 @@
     <dict>
       <key>NSExceptionDomains</key>
       <dict>
-        <key>boiling-everglades-46119.herokuapp.com</key>
+        <key>peek-wyncode.herokuapp.com</key>
         <dict/>
         <key>localhost</key>
         <dict>
